# jjs-invoker

./: .dockerignore  Cargo.toml  Dockerfile  Readme.md  bors.toml  build.sh  invoker.Dockerfile  rustfmt.toml  shim.Dockerfile
.github/workflows/: ci.yaml  deploy.yaml  pr.yaml  publish.yaml
actions/: deploy.yaml  pr.yaml
actions/blocks/: sysdeps.yaml
ci/: config.yaml  e2e-build.sh  e2e-run.sh  publish-build.sh  publish-images.sh
docs/: debug.md  shim.md
scripts/: build-all.sh  docker-entrypoint.sh
src/invoker/: Cargo.toml
src/invoker-api/: Cargo.toml
src/invoker-api/src/: debug.rs  invoke.rs  lib.rs  shim.rs  shims.rs
src/invoker/src/: api.rs  cli_args.rs  executor.rs  graph_interp.rs  handler.rs  init.rs  interactive_debug.rs  main.rs  print_invoke_request.rs  server.rs  shim.rs
src/invoker/src/executor/: file.rs  path_resolver.rs  sandbox.rs  volume.rs
src/invoker/src/executor/file/: linux_impl.rs
src/invoker/src/handler/: validate.rs
src/invoker/src/print_invoke_request/: writer.rs
src/shim/: Cargo.toml
src/shim/src/: interp.rs  main.rs  toolchain.rs  transform.rs
src/strace-debugger/: Cargo.toml
src/strace-debugger/src/: main.rs
src/test-runner/: Cargo.toml
src/test-runner/src/: env.rs  main.rs
test-data/simple/: Dockerfile  request.yaml  validate.py
test-data/simple/files/: input.txt
