[package]
name = "invoker"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
minion = { git = "https://github.com/jjs-dev/minion" }
tokio = { version = "1.0.2", features = ["macros", "io-std", "fs", "rt", "rt-multi-thread"] }
anyhow = "1.0.38"
futures-util = "0.3.12"
tracing = "0.1.22"
nix = "0.19.1"
once_cell = "1.5.2"
serde = { version = "1.0.120", features = ["derive"] }
tracing-futures = "0.2.4"
serde_json = "1.0.61"
clap = "3.0.0-beta.2"
libc = "0.2.82"
base64 = "0.13.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
warp = "0.3"
hyper = "0.14"
tracing-subscriber = "0.2.15"
