[package]
name = "invoker"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
invoker-api = { path = "../invoker-api" }
minion = { git = "https://github.com/jjs-dev/minion", rev = "337acd8e" }
tokio = { version = "1.2.0", features = ["macros", "io-std", "fs", "rt", "rt-multi-thread"] }
anyhow = "1.0.38"
futures-util = "0.3.13"
tracing = "0.1.25"
nix = "0.20.0"
once_cell = "1.7.2"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
clap = "3.0.0-beta.2"
libc = "0.2.88"
base64 = "0.13.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
warp = "0.3.0"
hyper = "0.14.4"
tracing-subscriber = "0.2.16"
url = "2.2.1"
tokio-stream = { version = "0.1.3", features = ["net"] }
reqwest = { version = "0.11.0", features = ["json"] }
openssl = { version = "0.10.33" }
thiserror = "1.0.24"
