[package]
name = "strace-debugger"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
clap = { version = "3.0.0-beta.2", default-features = false }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.6.0", features = ["rt", "rt-multi-thread", "process", "macros"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
warp = { version = "0.3.1", default-features = false }
invoker-api = { path = "../invoker-api" }