[package]
name = "test-runner"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
serde_json = "1.0.61"
rand = "0.8.2"
xshell = "0.1.8"
serde_yaml = "0.8.15"
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
uuid = { version = "0.8.2", features = ["v4"] }
base64 = "0.13.0"
