[package]
name = "test-runner"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
serde_json = "1.0.64"
rand = "0.8.3"
xshell = "0.1.9"
serde_yaml = "0.8.17"
reqwest = { version = "0.11.1", features = ["blocking", "json"] }
uuid = { version = "0.8.2", features = ["v4"] }
base64 = "0.13.0"
